# ai-auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  install-docker.sh  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
data/controls/: generation_prompt.md  iso27001_annex_a.yaml  iso27001_annex_a_small.yaml
data/examples/: README.md
data/examples/sources/: gitlab_infosec_excerpt.txt  minimal_policy.txt  sans_acceptable_use.txt
docs/: architecture.md  evaluation.md
scripts/: build_samples.py  generate_queries.py  run_eval.py
src/ai_auditor/: __init__.py  cli.py  config.py  embedding.py  llm.py  models.py  render.py  tracing.py  vector_store.py
src/ai_auditor/evaluation/: __init__.py  callbacks.py  metrics.py  mlflow_logger.py  runner.py
src/ai_auditor/graph/: build.py  state.py
src/ai_auditor/graph/nodes/: agentic_retrieval.py  assessment.py  chunking.py  embedding.py  orchestration.py  parsing.py  reporting.py  retrieval.py
src/ai_auditor/ingestion/: control_index.py
src/ai_auditor/prompts/: agent_finalize.md  assessment.md  query_generation.md  retrieval_agent.md
tests/: conftest.py  test_agentic_retrieval.py  test_assessment.py  test_chunking.py  test_cli.py  test_control_index.py  test_graph.py  test_integration.py  test_models.py  test_parsing.py  test_render.py  test_retrieval.py  test_vector_store.py
tests/evaluation/: test_callbacks.py  test_metrics.py
